--- a/Home.css
+++ b/Home.css
@@ -77,6 +77,16 @@
   padding: 0;
 }
 
+.u-section-1 .u-btn-2 {
+  background-image: none;
+  border-style: none none solid;
+  text-transform: uppercase;
+  font-size: 0.875rem;
+  letter-spacing: 1px;
+  margin: 20px auto 0 0;
+  padding: 0;
+}
+
 .u-section-1 .u-list-item-2 {
   background-image: linear-gradient(white, #e0e5eb);
 }
@@ -114,7 +124,17 @@
   margin: 20px auto 0 0;
 }
 
-.u-section-1 .u-btn-2 {
+.u-section-1 .u-btn-3 {
+  background-image: none;
+  border-style: none none solid;
+  text-transform: uppercase;
+  font-size: 0.875rem;
+  letter-spacing: 1px;
+  margin: 20px auto 0 0;
+  padding: 0;
+}
+
+.u-section-1 .u-btn-4 {
   background-image: none;
   border-style: none none solid;
   text-transform: uppercase;
@@ -161,7 +181,17 @@
   margin: 20px auto 0 0;
 }
 
-.u-section-1 .u-btn-3 {
+.u-section-1 .u-btn-5 {
+  background-image: none;
+  border-style: none none solid;
+  text-transform: uppercase;
+  font-size: 0.875rem;
+  letter-spacing: 1px;
+  margin: 20px auto 0 0;
+  padding: 0;
+}
+
+.u-section-1 .u-btn-6 {
   background-image: none;
   border-style: none none solid;
   text-transform: uppercase;
@@ -208,7 +238,17 @@
   margin: 20px auto 0 0;
 }
 
-.u-section-1 .u-btn-4 {
+.u-section-1 .u-btn-7 {
+  background-image: none;
+  border-style: none none solid;
+  text-transform: uppercase;
+  font-size: 0.875rem;
+  letter-spacing: 1px;
+  margin: 20px auto 0 0;
+  padding: 0;
+}
+
+.u-section-1 .u-btn-8 {
   background-image: none;
   border-style: none none solid;
   text-transform: uppercase;
@@ -261,7 +301,6 @@
 
   .u-section-1 .u-list-1 {
     height: auto;
-    margin-bottom: -158px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
@@ -282,17 +321,6 @@
     height: 283px;
     margin-left: -85px;
     margin-right: -85px;
-  }
-
-  .u-section-1 .u-text-1 {
-    margin-top: -213px;
-  }
-
-  .u-section-1 .u-list-1 {
-    margin-bottom: -171px;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
   }
 
   .u-section-1 .u-container-layout-1 {
@@ -334,14 +362,6 @@
 
   .u-section-1 .u-text-1 {
     font-size: 1.875rem;
-    margin-top: -252px;
-  }
-
-  .u-section-1 .u-list-1 {
-    margin-bottom: 50px;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
   }
 
   .u-section-1 .u-repeater-1 {
